# task_management

./: .gitignore  LICENSE  README.md  docker-compose.yml
docker/grafana/dashboards_json/: fastapi.json
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docker/tempo/: tempo.yaml
task_management/account-service/: Dockerfile  pyproject.toml
task_management/account-service/app/: main.py
task_management/notification-service/: Dockerfile  pyproject.toml  requirements.txt
task_management/notification-service/app/: main.py
task_management/notification-service/app/core/: kafka_consumer.py  logging.py
task_management/task-service/: Dockerfile  pyproject.toml
task_management/task-service/app/: main.py
task_management/task-service/app/api/: deps.py
task_management/task-service/app/auth/: jwt.py
task_management/task-service/app/core/: config.py
task_management/task-service/app/db/: __init__.py
task_management/task-service/app/models/: __init__.py  task.py
task_management/task-service/app/routers/: board.py  card.py  column.py
task_management/task-service/app/schemas/: board.py  card.py  column.py
task_management/task-service/app/services/: board_service.py  card_service.py  column_service.py
task_management/user-service/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
task_management/user-service/app/: main.py
task_management/user-service/app/api/: deps.py
task_management/user-service/app/auth/: jwt.py  security.py
task_management/user-service/app/core/: config.py  kafka.py  logging.py  redis.py  security.py  tracing.py
task_management/user-service/app/db/: init_db.py
task_management/user-service/app/models/: __init__.py  user.py
task_management/user-service/app/routers/: admin.py  login.py  users.py
task_management/user-service/app/schemas/: user.py
task_management/user-service/app/services/: admin_service.py  auth_service.py  user_service.py
task_management/user-service/test/: test_limit.py
(+2 files in other folders)
