[project]
name = "notification-service"
version = "0.1.0"
description = "Notification Service Consumer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "pydantic-settings>=2.12.0",
    "aiokafka>=0.12.0",
    "loguru>=0.7.3",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-requests",
]